--- a/Lab-5/css/styles.css
+++ b/Lab-5/css/styles.css
@@ -1,96 +1,119 @@
-/* ===== FEATURED (під твою точну розмітку) ===== */
-
-/* 0) Контейнер секції */
-#featured_container{
-  background:#c2c2c2;
-  padding:32px 0;
-}
-#featured_container .container{
-  max-width:1120px;
-  margin:0 auto;
-  padding:0 16px;
+#featured_container {
+    background: #C2C2C2;
 }
 
-/* 1) Сітка 2×2: .row розчиняємо, щоб елементи стали в одну grid-сітку */
-#featured_container .views-view-grid{
-  display:grid !important;
-  grid-template-columns: repeat(2, minmax(0,1fr)) !important;
-  gap:40px !important;
+@media (min-width: 768px) {
+    .container {
+        width: 750px;
+    }
 }
-#featured_container .views-view-grid > .row{
-  display:contents !important;
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
-
-/* 2) Прибираємо всі спадкові флоути/ширини з bootstrap-класів */
-#featured_container .views-col,
-#featured_container [class*="col-sm-"],
-#featured_container [class*="col-md-"],
-#featured_container [class*="col-lg-"],
-#featured_container [class*="col-"]{
-  float:none !important;
-  width:auto !important;
-  max-width:none !important;
-  margin:0 !important;
+.block-views-blockfront-page-news-block-2 {
+    margin-top: 3rem;
 }
-
-/* 3) Плитка: однакові розміри, обрізка зображення */
-#featured_container .views-col{
-  position:relative;
-  aspect-ratio:16 / 9;
-  border-radius:6px;
-  overflow:hidden;
-  background:#e5e7eb;
-  box-shadow:0 1px 0 rgba(0,0,0,.06);
+.form-group:last-child, .panel:last-child, p:last-child {
+    margin-bottom: 0;
 }
-/* обгортка-лінк займає всю плитку, прибираємо "білі шви" */
-#featured_container .views-col > div > span > a{
-  display:block;
-  height:100%;
-  line-height:0; /* прибирає мікро-проміжки від inline-елементів */
-}
-/* картинка заповнює плитку повністю */
-#featured_container .views-col img.img-responsive{
-  width:100% !important;
-  height:100% !important;
-  object-fit:cover !important;
-  display:block !important;
-  margin:0 !important;
-  border:0 !important;
+.form-group {
+    margin-bottom: 15px;
 }
 
-/* 4) Синій бейдж заголовка внизу зліва */
-#featured_container .views-col h2{
-  position:absolute !important;
-  left:16px; bottom:16px;
-  margin:0 !important;
-  padding:8px 12px !important;
-  font-family:'Roboto Condensed', Arial, sans-serif !important;
-  font-weight:400 !important;
-  font-size:18px !important;
-  line-height:1.25 !important;
-  color:#fff !important;
-  background:#252775 !important;
-  border:0 !important;
-  text-decoration:none !important;
-  display:inline-block !important;
-  max-width:calc(100% - 32px);
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
 }
-/* колір/фон і для варіанта з <span> усередині */
-#featured_container .views-col h2 span{
-  color:#fff !important;
-  background:#252775 !important;
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+html {
+    font-size: 10px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+@media (min-width: 768px) {
+    .col-sm-6 {
+        width: 50%;
+    }
+}
+@media (min-width: 768px) {
+    .col-sm-6 {
+        float: left;
+    }
+}
+#featured_container .views-view-grid,
+#featured_container .row{
+  display: flow-root;     
+}
+.col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    background-color: #fff;
+}
+#featured_container a:visited {
+    color: #fff;
+    text-decoration: none;
+    transition: color 3s 
+ease-out;
+}
+#featured_container a:link h2 span, #featured_container a:visited h2 span {
+    background: #252775;
+    transition: background 2s 
+ease-out;
+}
+#featured_container .col-sm-6 div {
+    position: relative;
+    margin-bottom: 3rem;
+}
+.carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
+    display: block;
+    max-width: 100%;
+    height: auto;
 }
 
-/* (якщо тінь не потрібна, ховаємо) */
-#featured_container .shadow_featured{ display:none; }
-
-/* Мобілка: 1 колонка */
-@media (max-width: 767.98px){
-  #featured_container .views-view-grid{ grid-template-columns:1fr !important; gap:24px !important; }
-  #featured_container .views-col h2{ left:12px; bottom:12px; font-size:16px !important; padding:8px 10px !important; }
+#featured_container .col-sm-6 div {
+    position: relative;
+    margin-bottom: 3rem;
 }
-
-/* Fallback, якщо немає aspect-ratio */
-@supports not (aspect-ratio: 1){
-  #featured_container .views-col{ height:300px !important; }
+#featured_container .shadow_featured {
+    position: absolute !important;
+    margin-bottom: 0 !important;
+    bottom: 0;
+    left: 0;
+    min-height: 75%;
+    width: 100%;
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.85));
+}
+#featured_container a:link h2 span, #featured_container a:visited h2 span {
+    background: #252775;
+    transition: background 2s 
+ease-out;
+}
+#featured_container h2 {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    margin: 0;
+    padding: 30px;
+    border-bottom: 2px solid #fff;
+    font-size: 2rem;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    font-family: inherit;
+    font-weight: 500;
+    line-height: 1.1;
+    color: #fff;
 }
