--- a/PR-2/css/styles.css
+++ b/PR-2/css/styles.css
@@ -81,7 +81,7 @@ body {
 .header-hero {
     background:
         linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-        url("/PR-2/backgroung.jpg") center / cover no-repeat;
+        url("/PR-2/backgroung.png") center / cover no-repeat;
     padding: 90px 15px;
     color: #fff;
 }
@@ -256,7 +256,7 @@ body {
 }
 
 .footer {
-    background: var(--primary-color);  /* синій */
+    background: var(--primary-color); 
     color: #fff;
     display: flex;
     gap: 20px;
